--- a/templates/StudentSignUp.html
+++ b/templates/StudentSignUp.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Student Sign Up{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
+  <h2>Student Sign up</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
